# eval-actionable-guidance

./: .env  .gitignore  11111.csv  DeFlip.py  LIME_HPO.py  LORMIKA.py  README.md  RQ1.ipynb  TimeLIME.py  analysis.py  analysis_cosine.py  analysis_dice_final.py  best_rf_params.json  bigml_mining.py  clean.py  compare.py  data_utils.py  decision_flip.py  deflip.py  describe.csv  dice.csv  dice2.csv  dice_analysis.py  dice_historical_seeding.py  discussion.py  eval_cosin.py  evaluate.py  evaluate2.py  evaluate_dice.py  evaluate_dice2.py  evaluate_dice_historical.py  ex.sh  example.txt  example_test_stats.csv  example_test_target_stats.csv  example_train_stats.csv  excel_defect.py  explanation_example.xlsx  flip_dice_all.py  flip_exp.py  (+39 more)
Dataset/: README.md
Explainer/: DeFlip.py  LIME_HPO.py  TimeLIME.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
evaluations/: accuracies.csv  feasibilities.csv  feasibility.csv  feasibility_cosine.csv  feasibility_mahalanobis.csv  feasibility_mahalanobis_DiCE.csv  feasibility_mahalanobis_DiCE_all_methods.csv  feasibility_mahalanobis_DiCE_all_methods_best.csv  feasibility_mahalanobis_DiCE_all_methods_best_100.csv  feasibility_mahalanobis_DiCE_all_methods_best_hist_seed.csv  feasibility_mahalanobis_DiCE_all_methods_best_hist_seed2.csv  feasibility_mahalanobis_DiCE_all_methods_first.csv  feasibility_mahalanobis_DiCE_all_methods_first_hist_seed.csv  feasibility_mahalanobis_DiCE_all_methods_first_hist_seed2.csv  feasibility_mahalanobis_DiCE_all_methods_first_hist_seed3.csv  feasibility_mahalanobis_DiCE_best.csv  feasibility_mahalanobis_DiCE_multi.csv  feasibility_mahalanobis_DiCE_single.csv  flip_rates.csv  flip_rates_DiCE.csv  flip_rates_DiCE_all_methods.csv  flip_rates_DiCE_all_methods_hist_seed.csv  flip_rates_DiCE_all_methods_hist_seed3.csv  flip_rates_DiCE_single.csv  implications.csv  mahalanobis_skew_summary.csv
flip_rates/: DeFlip.csv  DeFlip_actionable.csv  LIME-HPO.csv  LIME-HPO_all.csv  TimeLIME.csv  (+5 more)
(+33277 files in other folders)
