[project]
name = "deflip"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "verssae", email = "sparky@hanyang.ac.kr" }
]
dependencies = [
    "scikit-learn>=1.5.2",
    "lime>=0.2.0.1",
    "seaborn>=0.13.2",
    "mlxtend>=0.23.1",
    "scipy>=1.14.1",
    "natsort>=8.4.0",
    "dice-ml>=0.11",
    "catboost>=1.2.7",
    "xgboost>=2.1.1",
    "bigml>=9.7.1",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deflip"]
