[project]
name = "eval-actionable-guidance"
version = "0.1.0"
description = "Add your description here"
authors = [
    { }
]
dependencies = [
    "scikit-learn>=1.5.2",
    "lime>=0.2.0.1",
    "seaborn>=0.13.2",
    "mlxtend>=0.23.1",
    "scipy>=1.14.1",
    "natsort>=8.4.0",
    "dice-ml>=0.11",
    "xgboost>=2.1.1",
    "bigml>=9.7.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "cliffs-delta>=1.0.0",
    "statsmodels>=0.14.4",
    "numpy==1.26.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
virtual = true
